test-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "external"
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "instance"
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: LoadBalancer
  selector:
    app: nginx-app1
---
apiVersion: v1
kind: Service
metadata:
  name: app2-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "external"
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "instance"
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: LoadBalancer
  selector:
    app: nginx-app2
    #---
    #apiVersion: v1
    #kind: Service
    #metadata:
    #  name: app1-nginx
    #spec:
    #  selector:
    #    app: nginx-app1
    #  ports:
    #    - protocol: TCP
    #      port: 80
    #      targetPort: 80
    #  type: NodePort
    #---
    #apiVersion: v1
    #kind: Service
    #metadata:
    #  name: app2-nginx
    #spec:
    #  selector:
    #    app: nginx-app2
    #  ports:
    #    - protocol: TCP
    #      port: 80
    #      targetPort: 80
    #  type: NodePort
